--- a/10-aws/s3/index.html
+++ b/10-aws/s3/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
 
-     <h1 class="display-1">My Todo List</h1>
+     <h1 class="display-1">My Todo List - V1.0</h1>
 
      <h2 class="display-4">Process</h2>
       <div class="row">
